--- a/client/src/styles/common/premium/Email.module.css
+++ b/client/src/styles/common/premium/Email.module.css
@@ -98,7 +98,7 @@
 .humanIcon {
     width: 15px;
     height: 15px;
-    margin-right: 15px;
+    margin-right: 10px;
 }
 
 .inputField {
@@ -183,10 +183,20 @@
 
   .startButton {
     font-size: 1rem;
-    padding: 0.8rem 2rem;
+  }
+  .selectionButtons {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 0;
+    /* Added for centering */
+    margin: 0 auto;
   }
 
   .graph {
     margin-top: 40px;
+  }
+
+  .buttonText {
+    font-size: 0.9rem;
   }
 }
