chore: design fixed

--- a/client/src/pages/premium/Modify/Modify2/Modify2.module.css
+++ b/client/src/pages/premium/Modify/Modify2/Modify2.module.css
@@ -31,8 +31,9 @@
 }
 
 .noticeLine2 {
-    color: red;
+    font-weight: bold;
     font-size: 1rem;
+    color: #000000;
 }
 
 .noticeLine1, .noticeLine2 {
