--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,4 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    overflow-y: auto;  
+html {
     font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; 
 }
 
@@ -17,24 +13,10 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 60px;
-    background: white;
     border-bottom: 1px solid rgba(176, 176, 176, 0.3);
 }
 
 .route {
-    flex: 1 1 auto;
-    overflow-y: auto;  
     display: flex;
-    align-items: center;
     justify-content: center;
-    width: 100%;
-    background-color: white;
-}
-
-@media (max-width: 768px) {
-    .navbar {
-      height: 50px;
-    }
 }
