--- a/client/src/components/navbar/Nav.css
+++ b/client/src/components/navbar/Nav.css
@@ -1,7 +1,14 @@
 .navLogo {
-  margin-top: 5px;
   width: 250px;
   height: auto;
   max-width: 100%;
-  margin-bottom: 13px;
+  margin-top: 5px;
+  margin-bottom: 8px;
 }
+
+@media (max-width: 768px) {
+  .navLogo {
+    width: 200px;
+    height: auto;
+  }
+} 
