--- a/client/src/components/spinner/Spinner.module.css
+++ b/client/src/components/spinner/Spinner.module.css
@@ -1,10 +1,19 @@
 .spinnerContainer {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-height: 200px; /* 컨테이너의 최소 높이 설정 */
   }
   
   .spinnerImage {
     width: 80px;  /* 원하는 크기로 조절 */
     height: 80px;
+  }
+
+  .message {
+    margin-top: 20px;
+    font-size: 16px;
+    color: #333;
+    text-align: center;
   }
